# spreadsheetApplication

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  README.md  generate_cert.py  h origin LAP-23  pyproject.toml  requirements.txt  run.py  setup.py  view_tables.py
.github/workflows/: ci-cd.yml  deploy.yml  docker-build.yml
backend/: __init__.py  app.py  extensions.py  spreadsheet.db
backend/config/: __init__.py  config.py
backend/database/: __init__.py  db.py  redis_client.py  schema.sql  spreadsheet.db.wal
backend/routes/: __init__.py  auth.py  spreadsheet.py
backend/utils/: __init__.py  auth.py
certs/: cert.pem  key.pem
database/: spreadsheet.db
frontend/: index.html  signup.html  spreadsheet.html
kubernetes/: deployment.yaml  eks-cluster.yaml  ingress.yaml  karpenter.yaml  redis.yaml
tests/: test_app.py
