[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spreadsheet-application"
version = "1.0.0"
description = "A real-time collaborative spreadsheet application for sales data management"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.11.1",
    "duckdb>=0.10.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "werkzeug>=3.0.0"
]

[tool.uv]
pip = { python = "3.11" }

[tool.ruff]
# Line length configuration
line-length = 88

# Enable autofix behavior
fix = true

# Exclude files and directories
exclude = [
    ".git",
    ".ruff_cache",
    "venv",
    "__pycache__",
    "build",
    "dist"
]

[tool.ruff.lint]
# Enable specific rules
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
]

# Ignore specific rules
ignore = ["E501"]  # line too long

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["spreadsheet_application"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports 