[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spreadsheet-application"
version = "1.0.0"
description = "A real-time collaborative spreadsheet application for tracking sales data"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "flask>=3.0.0",
    "flask-socketio>=5.0.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "duckdb>=0.9.0",
    "werkzeug>=3.0.0",
    "python-socketio>=5.0.0",
    "eventlet>=0.33.0"
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["backend", "backend.database", "backend.routes", "backend.utils", "backend.config"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=backend" 